
2006-12-04 moj
 * Tweaked emails to be a bit more HTML (slightly larger font for 
    headings, and bold around usernames/titles).

2006-12-04 moj
 * Added email link to activation email.
 * Reworded activation email a little.

2006-12-04 moj
 * Added EngD thesis as thesis_type
 * Added Keynote as pres_type
 * Added relevant phrases

2006-12-04 cjg
 * Fixed bug in ordering of search results.
 * Added form to change order of results from results page.

2006-12-04 cjg
 * Fixed issue with import script treating no --user as user "0"
 * import script now only frets about no --user if it's an eprint import
 * Import plugins now set eprint_status to buffer if no other value is 
    available.

2006-12-04 tdb
 * Changed default for user arg in bin/import to undef, otherwise
    --user 0 gives a confusing error (non-obvious users are 1-indexed)
 * Replaced input_list with input_file (read from filename) and input_fh
    (read from filehandle)
 * input_file opens file for reading, sets binmode and calls input_fh
 * Added Import::TextFile abstract plugin that subclasses input_file to 
    detect Byte Order Marks and CRLF encoding
 * Removed CRLF encoding check from Import::FlatSubjects
 * Added error for STDIN to Import::BibTeX (unsupported)
 * Changed bin/import_subjects to use input_file

2006-12-04 cjg

 * Changed _foo to foo in params in searches - looks neater.
 * Added export to latest_tool
 * Added links to global feeds from front page.

2006-12-04 cjg
 * Fixed input_list call in testdata to be input_fh
 * Updated contributors list in AUTHORS and webpage.
 * Fixed bug with validating compound fields.
 * Fixed issue that Endnote and flatsubject import plugins didn't have
    "textfile" loaded. 
 * Moved around some fields in workflows
 * Added optional params to lookup urls (for passing extra info, eg. user
    group)
 * Added LIMIT 40 to journal lookups
 * Added publisher to article type
 * Cleaned up user validation subroutine
