@@ -468,7 +468,7 @@ User Area CGI Scripts
     <epp:phrase id="cgi/users/status:indexer_stopped">Stopped</epp:phrase>
     <epp:phrase id="cgi/users/status:indexer_stalled">Stalled</epp:phrase>
     <epp:phrase id="cgi/users/status:indexer_queue">Size of Index Queue</epp:phrase>
-    <epp:phrase id="cgi/users/status:indexer_queue_size"><pin name="size" /> Item(s)</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer_queue_size"><pin name="size" /> Field(s)</epp:phrase>
     <epp:phrase id="cgi/users/status:database_ok">OK</epp:phrase>
     <epp:phrase id="cgi/users/status:database_down">DOWN</epp:phrase>
     <epp:phrase id="cgi/users/status:users">Total Users</epp:phrase>
@@ -488,6 +488,7 @@ User Area CGI Scripts
     <epp:phrase id="cgi/users/status:nearly_out_of_space"><span class="alert">WARNING:</span> Available space for new items is running low</epp:phrase>
     <epp:phrase id="cgi/users/status:title">Server Status</epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin:title">Admin</epp:phrase>
+    <epp:phrase id="Plugin/Screen/FirstTool:title">No Tools Available</epp:phrase>
     <epp:phrase id="Plugin/Screen/Status:description">Status information for this server.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Status:indexer_not_running">The full-text indexer is not currently running. You should start it to ensure full-text searching operates correctly. <epc:pin name="start_button" /></epp:phrase>
     <epp:phrase id="Plugin/Screen/Status:indexer_stalled">The full-text indexer appears to have stalled. You may need to force restart it to ensure full-text searching operates correctly. <epc:pin name="force_start_button" /></epp:phrase>
@@ -1518,17 +1519,7 @@ Titles and Help for the System Fields
 <!-- Wrapper for HTML email -->
 <epp:phrase id="mail_wrapper">
 <html>
-<head>
-</head>
 <body>
-<style type="text/css">
-.ep_mail_title
-{
-	color: red;
-	font-size: 14pt;
-	font-weight: bold;
-}
-</style>
 <epc:pin name="body" />
 </body>
 </html>
